# autotrade2

./: .env.example  .gitattributes  .gitignore  .plan_yfinance_limits.md  .visualizer_config.json  2025-12-31-ok-heres-the-deal-theres-a-tech-spec-with-bulle.txt  2026-01-01-this-session-is-being-continued-from-a-previous-co.txt  AGENT_DISCREPANCY_RESOLUTION_SUMMARY.md  ATR_TEST_REPORT.md  BARS_TO_FIRST_BREAK_ANALYSIS.md  BOTTLENECK_VISUAL_SUMMARY.md  BREAK_MARKER_VISUAL_ANALYSIS.md  CACHE_IMPACT_QUICK_REFERENCE.md  CACHE_STRUCTURE_IMPACT_ANALYSIS.md  CHANGES_VERIFICATION.md  CHANNEL_DETECTION_PERFORMANCE_ANALYSIS.md  CHANNEL_DETECTION_QUICK_SUMMARY.txt  CHANNEL_LABELS_FIELDS.md  COLAB_SETUP.md  COMPLETE_CYCLES_IMPLEMENTATION_CHECKLIST.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SYSTEM_STATUS.md  DASHBOARD_INTEGRATION_COMPARISON.md  DATA_VALIDATION_GUIDE.md  Dockerfile  EXPERIMENT_TRACKING.md  FEATURE_RENAME_AUDIT.md  GPU_ACCELERATION_IMPLEMENTATION.md  GPU_OPTIMIZATION_SUMMARY.md  HANDOFF.md  HANDOFF_DASHBOARD_REVIEW.md  HIERARCHICAL_IMPLEMENTATION.md  HIERARCHICAL_SPEC.md  HYBRID_LIVE_INTEGRATION.md  HYBRID_MONTHLY_IMPLEMENTATION_STATUS.md  INTEGRATION_VISUAL_GUIDE.md  INVESTIGATION_FINDINGS.txt  LABEL_TIMING_DISCREPANCY_INVESTIGATION.md  LEARNED_PROJECTION_PLAN.md  (+168 more)
.devcontainer/: devcontainer.json
backend/: README.md  requirements.txt  start.sh
config/: __init__.py  api_keys.json  base.py  config.yaml  features_v7_minimal.yaml  hierarchical_config.yaml
deprecated/: backtest_all_models.py  config.py  continuation_labels_legacy.py  demo_arrow_navigation.py  ensemble_backtest.py  gpu_monitor.py  gui_dashboard.py  live_data_feed.py  main.py  ml_dashboard.py  news_encoder.py  prediction_scheduler.py  signal_generator.py  telegram_bot.py  test_gpu_optimizations.py  test_interactive_train_all.py  test_multiscale_system.py  test_num_workers_fix.py  test_progress.py  trade_tracker.py  train_meta_lnn.py  update_live_actuals.py  validate_event_data.py  validate_features.py
deprecated_code/: BUGFIX_PLAN.md  DASHBOARD_EXAMPLE_OUTPUT.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DASHBOARD_QUICK_REFERENCE.md  DASHBOARD_README.md  MIGRATION_NOTICE.md  PARTIAL_BARS_IMPLEMENTATION.md  README_DEPRECATED.md  Technical_Specification_v3.md  Technical_Specification_v5.md  Technical_Specification_v6.0.md  V4_Architecture_RawOHLC_CNN.md  __init__.py  backtest.py  check_models.py  hierarchical_config.yaml  live_data_feed.py  run.sh  run_server.py  test_api_key_fix.py  test_batch_size_limit.py  test_continuation_simple.py  test_multiscale_features.py  test_parallel_channels.py  train_all_models.sh  validate_data_alignment.py  validate_results.py
docs/: 3MONTH_TIMEFRAME_NOTES.md  ARCHITECTURE_V6.0_DURATION_PRIMARY.md  BUGFIX_LABEL_INSPECTOR.md  CHANNEL_PROJECTION_ARCHITECTURE.md  CLI_TRAINING_GUIDE.md  COMPREHENSIVE_TECH_SHEET.md  EVENTS_IMPLEMENTATION_PLAN.md  FINAL_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_3MONTH_AND_SLIDING.md  LABEL_INSPECTOR_FIXES_V2.md  LABEL_INSPECTOR_GUIDE.md  LABEL_INSPECTOR_UPDATES.md  PRESET_MODIFICATION_GUIDE.md  PRESET_MODIFICATION_TEST_REPORT.md  SAMPLE_INDEXED_STORAGE_PLAN.md  SLIDING_WINDOW_IMPLEMENTATION.md  TRAINING_BOTTLENECK_ANALYSIS.md  V11_COMPLETE_IMPLEMENTATION_SUMMARY.md  V6_BUGFIXES_APPLIED.md  V6_IMPLEMENTATION_REVIEW.md  V6_IMPLEMENTATION_SUMMARY.md  V6_QUICKSTART.md  WINDOW_SYNC_FIX.md  v5.4_roadmap.md
experiments/: run_per_tf_experiments.sh  run_remaining.sh
gce_setup/: README.md  instance_launch.sh  setup.sh
models/: backtest_results_2023.csv  backtest_results_2024.csv  hierarchical_training_history.json  lnn_1hour.pth  lnn_4hour.pth  lnn_lazy.pth  meta_lnn_test.pth
myenv/: pyvenv.cfg
rsi_monitor/: __init__.py  bounce_rules.py  channel.py  core.py  dashboard.py  data.py  signals.py  vix_analyzer.py
scripts/: analyze_feature_importance.py  convert_continuation_to_mmap.py  create_multiscale_csvs.py  example_extract_features.py  generate_v6_cache.py  test_architecture.py  test_extractors.py  test_v7_pipeline.py  validate_channels.py  validate_feature_parity.py  validate_precomputed.py
src/: data_handler.py  gui_dashboard.py  gui_dashboard_enhanced.py  linear_regression.py  live_data_fetcher.py  news_analyzer.py  rsi_calculator.py  signal_generator.py  telegram_bot.py
v15/: data.py  (+25 more)
v15_cpp/: ACTUAL_MEASUREMENTS.md  BENCHMARK_QUICK_REF.md  BENCHMARK_README.md  BENCHMARK_SUMMARY.md  BENCHMARK_SUMMARY.txt  BUILD_MANUAL.md  CHANNEL_DETECTOR_FIXES.md  CMakeLists.txt  DATA_LOADER_README.md  DEBUGGING_COMPLETE.md  EXTRACT_ALL_FEATURES_FLOW_DIAGRAM.txt  FIXES_APPLIED.md  INDICATORS_README.md  PASS3_SAMPLE_GENERATION_DEBUG.md  PERFORMANCE_REPORT.md  PROJECT_COMPLETE.md  PYTHON_BINDINGS.md  PYTHON_CPP_MAPPING.md  QUICK_REFERENCE.md  README.md  RESAMPLING_VALIDATION_SUMMARY.md  SCANNER_README.md  SERIALIZATION_README.md  SUCCESS_SUMMARY.txt  SUMMARY.md  VALIDATION_REPORT.md  VERIFICATION_CHECKLIST.md  VERSION.txt  benchmark_loader  build_and_test_loader.sh  build_manual.sh  build_resampling_test.sh  example_link.sh  fix_build_errors.sh  inspect_sample_structure.py  install.sh  load_samples.py  python_resampling_reference.json  test_channel_detector  test_pass3_debug  (+4 more)
v15_cpp/examples/: quick_start.cpp
v15_cpp/include/: channel.hpp  channel_detector.hpp  channel_history.hpp  data_loader.hpp  feature_array.hpp  feature_extractor.hpp  flat_writer.hpp  indicators.hpp  labels.hpp  npy_writer.hpp  scanner.hpp  serialization.hpp  types.hpp
v15_cpp/python_bindings/: bindings.cpp  example.py
v15_cpp/scripts/: benchmark_comparison.py  show_performance.sh
v15_cpp/src/: channel_detector.cpp  feature_extractor.cpp  flat_writer.cpp  indicators.cpp  main_scanner.cpp  npy_writer.cpp  scanner.cpp  scanner_pass3.cpp  serialization.cpp
v15_cpp/tests/: INTEGRATION_TEST_RESULTS.md  RUN_TESTS.md  benchmark.cpp  integration_test  integration_test.cpp  run_integration_test.sh  test_channel_detector.cpp  test_channel_edge_cases.cpp  test_indicators.cpp  test_label_generator.cpp  validate_against_python.cpp  validate_features.py
(+881 files in other folders)
